fix: recomendaciones sonar