@@ -1,11 +1,8 @@
 package com.grupo25.tp_obj2_hibernate.services;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import com.grupo25.tp_obj2_hibernate.model.dto.TicketDTO;
@@ -22,13 +19,17 @@ import com.grupo25.tp_obj2_hibernate.repositories.UsuarioRepository;
  */
 @Service
 public class TicketService {
-    @Autowired
-    private TicketRepository ticketRepository;
 
-    @Autowired
+    private TicketRepository ticketRepository;
     private UsuarioRepository usuarioRepository;
-    
-    /** 
+
+    public TicketService(TicketRepository ticketRepository,
+            UsuarioRepository usuarioRepository) {
+        this.ticketRepository = ticketRepository;
+        this.usuarioRepository = usuarioRepository;
+    }
+
+    /**
      * Obtiene todos los tickets.
      * 
      * @return List<TicketDTO>
@@ -36,20 +37,21 @@ public class TicketService {
      * @author Ariel Serato
      */
     public List<TicketDTO> getTickets() {
-        return ticketRepository.findAll().stream().map(TicketDTO::new).collect(Collectors.toList());
+        return ticketRepository.findAll().stream().map(TicketDTO::new).toList();
     }
+
     /**
      * Crea un ticket utilizando variables por argumento.
      *
-     * @param  titulo, descripcion, estado, prioridad, fechaCreacion,fechaResolucion
+     * @param titulo, descripcion, estado, prioridad, fechaCreacion,fechaResolucion
      * @return TicketDTO
      * 
      * 
      * 
      * @author Ignacio Cruz
      */
-    public TicketDTO crearTicket(String titulo,String descripcion,String estado,String prioridad,
-    							LocalDateTime fechaCreacion) {
+    public TicketDTO crearTicket(String titulo, String descripcion, String estado, String prioridad,
+            LocalDateTime fechaCreacion) {
         Ticket ticket = new Ticket();
         ticket.setTitulo(titulo);
         ticket.setDescripcion(descripcion);
@@ -71,7 +73,7 @@ public class TicketService {
      */
     public String getEstadoTicket(int ticketId) {
         return ticketRepository.findById(ticketId)
-                .map(ticket -> ticket.getEstado())
+                .map(Ticket::getEstado)
                 .orElseThrow(() -> new RuntimeException("Ticket no encontrado con ID: " + ticketId));
     }
 
@@ -88,16 +90,15 @@ public class TicketService {
     public List<TicketDTO> getTodosLosTicketsPorUsuarioCreador(int usuarioId) {
         Usuario usuario = usuarioRepository.findById(usuarioId)
                 .orElseThrow(() -> new RuntimeException("Usuario no encontrado con ID: " + usuarioId));
-        
+
         return ticketRepository.findByCreador(usuario).stream()
-                .map(ticket -> new TicketDTO(ticket))
-                .collect(Collectors.toList());
+                .map(TicketDTO::new).toList();
     }
 
     /**
      * Asigna un ticket a un tecnico dado su ID.
      * 
-     * @param id El ID del ticket.
+     * @param id        El ID del ticket.
      * @param idTecnico El ID del tecnico.
      * @return El ticket asignado.
      * 
@@ -116,7 +117,7 @@ public class TicketService {
     /**
      * Cambia la prioridad de un ticket.
      * 
-     * @param id El ID del ticket.
+     * @param id        El ID del ticket.
      * @param prioridad La prioridad del ticket.
      * @return El ticket actualizado.
      * 
